# domoio

./: .gitignore  CMakeLists.txt  Gemfile  Gruntfile.coffee  README.org  Rakefile  env.sh  package.json
ansible/: devmachine.yml
cmake/Modules/: FindICU.cmake  FindV8.cmake
db/migrate/: 20151103201906_create_devices.rb  20151103203310_create_users.rb
examples/: application.coffee  config.sample
include/: config.h  crypt.h  data_mapper.h  database.h  devices.h  domoio.h  domoio_server.h  events.h  exceptions.h  helpers.h  httpd.h  jsengine.h  json.h  log.h  models.h  support.h  uuid.h
src/: connection.cc  control_connection.cc  control_server.cc  crypt.cc  database.cc  device_connection.cc  domoio.cc  events.cc  helpers.cc  main.cc  options.cc  server.cc  server_run.cc  ssdp.cc
src/commands/: cmd_all_ports_state.cc  cmd_create_session.cc  cmd_exit.cc  cmd_get_devices.cc  cmd_login.cc  cmd_set.cc  cmd_start_events.cc
src/crypto/: aes.cc  block_cipher.cc  crypto.cc  rsa.cc
src/httpd/: http_server.cc  httpd_action.cc  request.cc
src/httpd/actions/: devices.cc  events.cc  http_console.cc  http_devices.cc  http_events.cc  http_ports.cc  http_static_content.cc  http_users.cc  ports.cc
src/jsengine/: device_template.cc  devices_callback.cc  engine.cc  file_exists_callback.cc  log_callback.cc  port_template.cc  read_file_callback.cc
src/jsengine/framework/: application.js
src/jsengine/framework/core/: console.js  devices.coffee  domoio.coffee
src/models/: device.cc  port.cc
test/: domoio_test.cc
test/features/: cmd_all_ports_state_test.cc  cmd_set_test.cc  create_session_test.cc  events_test.cc  login_test.cc  server_test.cc  signals_test.cc
test/features/http/ports/: update_test.cc
test/support/: domoio_test.h  factories.cc  helpers.cc  test_control.cc  test_device.cc
test/unit/: block_cypher_test.cc  devices_test.cc
test/unit/httpd/: httpd_action_test.cc  request_test.cc  server_test.cc
test/unit/models/: model_device_test.cc  model_user_test.cc
web/coffee/: 0_model.coffee  boot.js.coffee  devices_manager.js.coffee  models.js.coffee  routes.js.coffee
web/coffee/components/: device.js.coffee
web/coffee/controllers/: site_controller.js.coffee
web/coffee/controllers/admin/: admin_controller.coffee  console_controller.coffee  devices_controllers.js.coffee  ports_controller.js.coffee  users_controller.js.coffee
web/coffee/directives/: cclass.coffee  select2.js.coffee
web/lib/js/: unico.js
web/public/: index.html  ssdp.xml
web/public/assets/tmpl/admin/console/: index.html  show.html
web/public/assets/tmpl/admin/devices/: edit.html  index.html  new.html
web/public/assets/tmpl/admin/ports/: edit.html  new.html
web/public/assets/tmpl/admin/users/: edit.html  index.html  new.html
web/public/assets/tmpl/home/: index.html
web/public/assets/tmpl/layouts/: admin.html  application.html
